Fix build and tests
Signed-off-by: Alexey Polyudov <apolyudov@google.com>
Change-Id: I3671e40fd0f8f028e3c8e46c4a47de0d2cc9aeff

--- a/cpp/core/internal/mediums/CMakeLists.txt
+++ b/cpp/core/internal/mediums/CMakeLists.txt
@@ -55,3 +55,8 @@ target_link_libraries(core_internal_mediums_test
     platform_impl_default
     platform_utils
 )
+
+add_test(
+  NAME core_internal_mediums_test
+  COMMAND core_internal_mediums_test
+)
