--- a/cpp/platform/api/BUILD
+++ b/cpp/platform/api/BUILD
@@ -20,23 +20,28 @@ cc_library(
         "hash_utils.h",
         "input_file.h",
         "input_stream.h",
+        "listenable_future.h",
         "lock.h",
         "multi_thread_executor.h",
         "output_file.h",
         "output_stream.h",
         "scheduled_executor.h",
+        "server_sync.h",
         "settable_future.h",
         "single_thread_executor.h",
         "socket.h",
         "submittable_executor.h",
         "system_clock.h",
         "thread_utils.h",
+        "webrtc.h",
         "wifi.h",
+        "wifi_lan.h",
     ],
     deps = [
         "//platform:types",
         "//platform/port:down_cast",
         "//platform/port:string",
+        "//webrtc/files/stable/webrtc/api:libjingle_peerconnection_api",
     ],
 )
 
