add depot_tools submodule
Signed-off-by: Alexey Polyudov <apolyudov@google.com>
Change-Id: Ic7bdf8d36c39b14a5a0922b01a6ea64df066a1bb

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,7 @@
 	path = third_party/smhasher
 	url = https://github.com/aappleby/smhasher
 	branch = master
+[submodule "third_party/depot_tools"]
+	path = third_party/depot_tools
+	url = https://chromium.googlesource.com/chromium/tools/depot_tools.git
+	branch = master
