Roll forward to cl/314549634
Change-Id: I4d1e7eacd5fa4078a094571ad6d5f51e422535ff

--- a/cpp/core_v2/internal/BUILD
+++ b/cpp/core_v2/internal/BUILD
@@ -4,6 +4,7 @@ cc_library(
         "base_endpoint_channel.cc",
         "base_pcp_handler.cc",
         "ble_advertisement.cc",
+        "bluetooth_device_name.cc",
         "client_proxy.cc",
         "encryption_runner.cc",
         "endpoint_channel_manager.cc",
@@ -16,6 +17,7 @@ cc_library(
         "base_endpoint_channel.h",
         "base_pcp_handler.h",
         "ble_advertisement.h",
+        "bluetooth_device_name.h",
         "client_proxy.h",
         "encryption_runner.h",
         "endpoint_channel.h",
@@ -36,8 +38,9 @@ cc_library(
         "//core_v2:core_types",
         "//proto/connections:offline_wire_formats_portable_proto",
         "//platform_v2/base",
-        "//platform_v2/public",
+        "//platform_v2/public:comm",
         "//platform_v2/public:logging",
+        "//platform_v2/public:types",
         "//proto:connections_enums_portable_proto",
         "//securegcm:ukey2",
         "//absl/base:core_headers",
@@ -71,6 +74,7 @@ cc_test(
         "base_endpoint_channel_test.cc",
         "base_pcp_handler_test.cc",
         "ble_advertisement_test.cc",
+        "bluetooth_device_name_test.cc",
         "client_proxy_test.cc",
         "encryption_runner_test.cc",
         "endpoint_channel_manager_test.cc",
@@ -87,8 +91,9 @@ cc_test(
         "//proto/connections:offline_wire_formats_portable_proto",
         "//platform_v2/base",
         "//platform_v2/impl/g3",  # build_cleaner: keep
-        "//platform_v2/public",
+        "//platform_v2/public:comm",
         "//platform_v2/public:logging",
+        "//platform_v2/public:types",
         "//proto:connections_enums_portable_proto",
         "//securegcm:ukey2",
         "//testing/base/public:gunit",
