--- a/cpp/platform_v2/impl/shared/BUILD
+++ b/cpp/platform_v2/impl/shared/BUILD
@@ -9,10 +9,7 @@ cc_library(
     visibility = [
         "//platform_v2/impl:__subpackages__",
     ],
-    deps = [
-        "//platform_v2/api",
-        "//platform_v2/base",
-    ],
+    deps = ["//platform_v2/api:types"],
 )
 
 cc_library(
@@ -28,7 +25,31 @@ cc_library(
     ],
     deps = [
         ":posix_mutex",
-        "//platform_v2/api",
+        "//platform_v2/api:types",
+    ],
+)
+
+cc_library(
+    name = "file",
+    srcs = ["file.cc"],
+    hdrs = ["file.h"],
+    visibility = [
+        "//platform_v2/impl:__subpackages__",
+    ],
+    deps = [
+        "//platform_v2/api:types",
         "//platform_v2/base",
+        "//absl/strings",
+    ],
+)
+
+cc_test(
+    name = "file_test",
+    srcs = ["file_test.cc"],
+    deps = [
+        ":file",
+        "//file/util:temp_path",
+        "//platform_v2/base",
+        "//testing/base/public:gunit_main",
     ],
 )
