--- a/cpp/core/BUILD
+++ b/cpp/core/BUILD
@@ -51,6 +51,7 @@ cc_library(
         "//platform:utils",
         "//platform/api",
         "//platform/impl/g3",
+        "//platform/impl/shared:file",
         "//platform/impl/shared/sample:sample_wifi_medium",
         "//platform/port:string",
     ],
