--- a/cpp/core_v2/BUILD
+++ b/cpp/core_v2/BUILD
@@ -12,8 +12,9 @@ cc_library(
     deps = [
         ":core_types",
         "//core_v2/internal",
-        "//platform_v2/public",
+        "//platform_v2/public:comm",
         "//platform_v2/public:logging",
+        "//platform_v2/public:types",
         "//absl/strings",
         "//absl/time",
         "//absl/types:span",
@@ -38,8 +39,9 @@ cc_library(
     ],
     deps = [
         "//platform_v2/base",
-        "//platform_v2/public",
+        "//platform_v2/public:comm",
         "//platform_v2/public:logging",
+        "//platform_v2/public:types",
         "//absl/strings",
         "//absl/types:variant",
     ],
@@ -62,9 +64,10 @@ cc_test(
         "//core_v2/internal",
         "//core_v2/internal:internal_test",
         "//platform_v2/base",
-        "//platform_v2/impl/g3",
-        "//platform_v2/public",
+        "//platform_v2/impl/g3",  # build_cleaner: keep
+        "//platform_v2/public:comm",
         "//platform_v2/public:logging",
+        "//platform_v2/public:types",
         "//testing/base/public:gunit_main",
         "//absl/strings",
         "//absl/time",
