--- a/cpp/platform/api/BUILD
+++ b/cpp/platform/api/BUILD
@@ -47,7 +47,7 @@ cc_library(
         "//platform/port:string",
         "//absl/strings",
         "//absl/types:any",
-        "//webrtc/api:libjingle_peerconnection_api",
+        "//webrtc/files/stable/webrtc/api:libjingle_peerconnection_api",
     ],
 )
 
