--- a/cpp/platform_v2/impl/shared/BUILD
+++ b/cpp/platform_v2/impl/shared/BUILD
@@ -51,5 +51,6 @@ cc_test(
         "//file/util:temp_path",
         "//platform_v2/base",
         "//testing/base/public:gunit_main",
+        "//absl/strings",
     ],
 )
