Roll forward to cl/320013226
Signed-off-by: Alexey Polyudov <apolyudov@google.com>
Change-Id: Icfd8521f6bff1ee746204825516121198c90da30

--- a/cpp/platform_v2/public/BUILD
+++ b/cpp/platform_v2/public/BUILD
@@ -107,6 +107,7 @@ cc_test(
         "atomic_reference_test.cc",
         "bluetooth_adapter_test.cc",
         "bluetooth_classic_test.cc",
+        "cancelable_alarm_test.cc",
         "condition_variable_test.cc",
         "count_down_latch_test.cc",
         "crypto_test.cc",
