Roll forward to cl/321106672
Signed-off-by: Alexey Polyudov <apolyudov@google.com>
Change-Id: Iabb20e9c7f7487268fa3ebbbeb58540092e10e0e

--- a/cpp/platform_v2/impl/g3/BUILD
+++ b/cpp/platform_v2/impl/g3/BUILD
@@ -105,6 +105,7 @@ cc_library(
         "//platform_v2/api:comm",
         "//platform_v2/api:platform",
         "//platform_v2/api:types",
+        "//platform_v2/base:test_util",
         "//platform_v2/impl/shared:file",
         "//absl/base:core_headers",
         "//absl/memory",
