Roll forward to cl/321106672
Signed-off-by: Alexey Polyudov <apolyudov@google.com>
Change-Id: I6e34e075aa2cbbacba714019f6d0e7506313e53d

--- a/cpp/core_v2/internal/mediums/webrtc/BUILD
+++ b/cpp/core_v2/internal/mediums/webrtc/BUILD
@@ -63,6 +63,7 @@ cc_test(
     deps = [
         ":webrtc",
         "//platform_v2/base",
+        "//platform_v2/base:test_util",
         "//platform_v2/impl/g3",  # buildcleaner: keep
         "//platform_v2/public:comm",
         "//platform_v2/public:types",
