Roll forward to cl/329875420
Signed-off-by: Alexey Polyudov <apolyudov@google.com>
Change-Id: I50e284b30472160a409829957b2cb3926babfede

--- a/cpp/core_v2/internal/BUILD
+++ b/cpp/core_v2/internal/BUILD
@@ -61,6 +61,7 @@ cc_library(
         "//core/internal:message_lite",
         "//core_v2:core_types",
         "//core_v2/internal/mediums",
+        "//core_v2/internal/mediums:utils",
         "//core_v2/internal/mediums/webrtc",
         "//proto/connections:offline_wire_formats_portable_proto",
         "//platform_v2/base",
