Roll forward to cl/331498408
Signed-off-by: Alexey Polyudov <apolyudov@google.com>
Change-Id: If30a8df80799adec3aafba5b8dd4c539fc21e16d

--- a/cpp/platform_v2/impl/g3/BUILD
+++ b/cpp/platform_v2/impl/g3/BUILD
@@ -18,9 +18,7 @@ cc_library(
         "scheduled_executor.h",
         "single_thread_executor.h",
     ],
-    visibility = [
-        "//platform_v2/impl/g3:__pkg__",
-    ],
+    visibility = ["//visibility:private"],
     deps = [
         "//base",
         "//platform_v2/api:platform",
@@ -52,9 +50,7 @@ cc_library(
         "webrtc.h",
         "wifi_lan.h",
     ],
-    visibility = [
-        "//platform_v2/impl/g3:__pkg__",
-    ],
+    visibility = ["//visibility:private"],
     deps = [
         ":types",
         "//platform_v2/api:comm",
