Roll forward to cl/331498408
Signed-off-by: Alexey Polyudov <apolyudov@google.com>
Change-Id: I21206f5720b0805f8c08e6604fc3b1fe08592046

--- a/cpp/core_v2/internal/BUILD
+++ b/cpp/core_v2/internal/BUILD
@@ -21,6 +21,7 @@ cc_library(
         "ble_endpoint_channel.cc",
         "bluetooth_device_name.cc",
         "bluetooth_endpoint_channel.cc",
+        "bwu_manager.cc",
         "client_proxy.cc",
         "encryption_runner.cc",
         "endpoint_channel_manager.cc",
@@ -35,17 +36,21 @@ cc_library(
         "payload_manager.cc",
         "pcp_manager.cc",
         "service_controller_router.cc",
+        "webrtc_bwu_handler.cc",
         "webrtc_endpoint_channel.cc",
         "wifi_lan_endpoint_channel.cc",
         "wifi_lan_service_info.cc",
     ],
     hdrs = [
+        "base_bwu_handler.h",
         "base_endpoint_channel.h",
         "base_pcp_handler.h",
         "ble_advertisement.h",
         "ble_endpoint_channel.h",
         "bluetooth_device_name.h",
         "bluetooth_endpoint_channel.h",
+        "bwu_handler.h",
+        "bwu_manager.h",
         "client_proxy.h",
         "encryption_runner.h",
         "endpoint_channel.h",
@@ -64,6 +69,7 @@ cc_library(
         "pcp_manager.h",
         "service_controller.h",
         "service_controller_router.h",
+        "webrtc_bwu_handler.h",
         "webrtc_endpoint_channel.h",
         "wifi_lan_endpoint_channel.h",
         "wifi_lan_service_info.h",
@@ -133,6 +139,7 @@ cc_test(
         "base_pcp_handler_test.cc",
         "ble_advertisement_test.cc",
         "bluetooth_device_name_test.cc",
+        "bwu_manager_test.cc",
         "client_proxy_test.cc",
         "encryption_runner_test.cc",
         "endpoint_channel_manager_test.cc",
@@ -151,6 +158,7 @@ cc_test(
         ":internal",
         ":internal_test",
         "//core_v2:core_types",
+        "//core_v2/internal/mediums",
         "//proto/connections:offline_wire_formats_portable_proto",
         "//platform_v2/base",
         "//platform_v2/base:test_util",
