Roll forward to cl/336363104
Signed-off-by: hai007 <hais@google.com>

--- a/cpp/core_v2/internal/mediums/BUILD
+++ b/cpp/core_v2/internal/mediums/BUILD
@@ -25,7 +25,9 @@ cc_library(
         "//core_v2/internal:__subpackages__",
     ],
     deps = [
+        ":utils",
         "//core_v2:core_types",
+        "//core_v2/internal/mediums/ble_v2",
         "//core_v2/internal/mediums/webrtc",
         "//platform_v2/base",
         "//platform_v2/public:comm",
@@ -49,6 +51,7 @@ cc_library(
     hdrs = ["utils.h"],
     visibility = [
         "//core_v2/internal:__pkg__",
+        "//core_v2/internal/mediums:__pkg__",
         "//core_v2/internal/mediums/ble_v2:__pkg__",
         "//core_v2/internal/mediums/webrtc:__pkg__",
     ],
