--- a/cpp/core/internal/BUILD
+++ b/cpp/core/internal/BUILD
@@ -5,6 +5,7 @@ cc_library(
         "base_pcp_handler.cc",
         "ble_advertisement.cc",
         "ble_endpoint_channel.cc",
+        "bluetooth_bwu_handler.cc",
         "bluetooth_device_name.cc",
         "bluetooth_endpoint_channel.cc",
         "bwu_manager.cc",
@@ -24,6 +25,7 @@ cc_library(
         "service_controller_router.cc",
         "webrtc_bwu_handler.cc",
         "webrtc_endpoint_channel.cc",
+        "wifi_lan_bwu_handler.cc",
         "wifi_lan_endpoint_channel.cc",
         "wifi_lan_service_info.cc",
     ],
@@ -33,6 +35,7 @@ cc_library(
         "base_pcp_handler.h",
         "ble_advertisement.h",
         "ble_endpoint_channel.h",
+        "bluetooth_bwu_handler.h",
         "bluetooth_device_name.h",
         "bluetooth_endpoint_channel.h",
         "bwu_handler.h",
@@ -57,6 +60,7 @@ cc_library(
         "service_controller_router.h",
         "webrtc_bwu_handler.h",
         "webrtc_endpoint_channel.h",
+        "wifi_lan_bwu_handler.h",
         "wifi_lan_endpoint_channel.h",
         "wifi_lan_service_info.h",
     ],
