--- a/cpp/core/internal/BUILD
+++ b/cpp/core/internal/BUILD
@@ -16,6 +16,7 @@ cc_library(
         "internal_payload.cc",
         "internal_payload_factory.cc",
         "offline_frames.cc",
+        "offline_frames_validator.cc",
         "offline_service_controller.cc",
         "p2p_cluster_pcp_handler.cc",
         "p2p_point_to_point_pcp_handler.cc",
@@ -48,6 +49,7 @@ cc_library(
         "internal_payload.h",
         "internal_payload_factory.h",
         "offline_frames.h",
+        "offline_frames_validator.h",
         "offline_service_controller.h",
         "p2p_cluster_pcp_handler.h",
         "p2p_point_to_point_pcp_handler.h",
@@ -149,6 +151,7 @@ cc_test(
         "endpoint_manager_test.cc",
         "internal_payload_factory_test.cc",
         "offline_frames_test.cc",
+        "offline_frames_validator_test.cc",
         "offline_service_controller_test.cc",
         "p2p_cluster_pcp_handler_test.cc",
         "payload_manager_test.cc",
