Roll forward to cl/342344386
Signed-off-by: hai007 <hais@google.com>

--- a/cpp/core/internal/BUILD
+++ b/cpp/core/internal/BUILD
@@ -13,6 +13,7 @@ cc_library(
         "encryption_runner.cc",
         "endpoint_channel_manager.cc",
         "endpoint_manager.cc",
+        "injected_bluetooth_device_store.cc",
         "internal_payload.cc",
         "internal_payload_factory.cc",
         "offline_frames.cc",
@@ -46,6 +47,7 @@ cc_library(
         "endpoint_channel.h",
         "endpoint_channel_manager.h",
         "endpoint_manager.h",
+        "injected_bluetooth_device_store.h",
         "internal_payload.h",
         "internal_payload_factory.h",
         "offline_frames.h",
@@ -70,12 +72,13 @@ cc_library(
         "//core:__pkg__",
     ],
     deps = [
+        ":message_lite",
         "//core:core_types",
-        "//core/internal:message_lite",
         "//core/internal/mediums",
         "//core/internal/mediums:utils",
         "//core/internal/mediums/webrtc",
         "//proto/connections:offline_wire_formats_portable_proto",
+        "//platform/api:comm",
         "//platform/base",
         "//platform/base:util",
         "//platform/public:comm",
@@ -149,6 +152,7 @@ cc_test(
         "encryption_runner_test.cc",
         "endpoint_channel_manager_test.cc",
         "endpoint_manager_test.cc",
+        "injected_bluetooth_device_store_test.cc",
         "internal_payload_factory_test.cc",
         "offline_frames_test.cc",
         "offline_frames_validator_test.cc",
@@ -169,6 +173,7 @@ cc_test(
         "//platform/base",
         "//platform/base:test_util",
         "//platform/impl/g3",  # build_cleaner: keep
+        "//platform/public:comm",
         "//platform/public:logging",
         "//platform/public:types",
         "//proto:connections_enums_portable_proto",
