Roll forward to cl/343785060
Signed-off-by: Edwin Wu <edwinwu@google.com>

--- a/cpp/core/BUILD
+++ b/cpp/core/BUILD
@@ -53,6 +53,7 @@ cc_library(
     ],
     deps = [
         "//platform/base",
+        "//platform/base:util",
         "//platform/public:comm",
         "//platform/public:logging",
         "//platform/public:types",
