--- a/cpp/core/BUILD
+++ b/cpp/core/BUILD
@@ -39,6 +39,7 @@ cc_library(
     ],
     deps = [
         "//platform/base",
+        "//platform/base:util",
         "//platform/public:comm",
         "//platform/public:logging",
         "//platform/public:types",
