Roll forward to cl/345608764.
Signed-off-by: hai007 <hais@google.com>

--- a/cpp/platform/api/BUILD
+++ b/cpp/platform/api/BUILD
@@ -65,6 +65,7 @@ cc_library(
         "platform.h",
     ],
     visibility = [
+        "//googlemac/iPhone/Shared/Nearby/Connections_v2:__subpackages__",
         "//platform/base:__pkg__",
         "//platform/impl:__subpackages__",
         "//platform/public:__pkg__",
