--- a/cpp/core/internal/fuzzers/BUILD
+++ b/cpp/core/internal/fuzzers/BUILD
@@ -25,3 +25,9 @@ cc_fuzz_target(
         "//platform/base",
     ],
 )
+
+filegroup(
+    name = "all_files",
+    srcs = glob(["**"]),
+    visibility = ["//third_party/nearby_connections:__pkg__"],
+)
