--- a/cpp/core/internal/mediums/webrtc/BUILD
+++ b/cpp/core/internal/mediums/webrtc/BUILD
@@ -76,3 +76,9 @@ cc_test(
         "//webrtc/api:scoped_refptr",
     ],
 )
+
+filegroup(
+    name = "all_files",
+    srcs = glob(["**"]),
+    visibility = ["//third_party/nearby_connections:__pkg__"],
+)
