--- a/cpp/platform/api/BUILD
+++ b/cpp/platform/api/BUILD
@@ -97,3 +97,9 @@ cc_library(
         "//platform/base",
     ],
 )
+
+filegroup(
+    name = "all_files",
+    srcs = glob(["**"]),
+    visibility = ["//third_party/nearby_connections:__pkg__"],
+)
