--- a/cpp/platform/impl/g3/BUILD
+++ b/cpp/platform/impl/g3/BUILD
@@ -125,3 +125,9 @@ cc_library(
         "//platform/impl/shared:file",
     ],
 )
+
+filegroup(
+    name = "all_files",
+    srcs = glob(["**"]),
+    visibility = ["//third_party/nearby_connections:__pkg__"],
+)
