--- a/cpp/platform/impl/shared/BUILD
+++ b/cpp/platform/impl/shared/BUILD
@@ -70,3 +70,9 @@ cc_test(
         "//platform/base",
     ],
 )
+
+filegroup(
+    name = "all_files",
+    srcs = glob(["**"]),
+    visibility = ["//third_party/nearby_connections:__pkg__"],
+)
