--- a/proto/BUILD
+++ b/proto/BUILD
@@ -96,3 +96,9 @@ java_proto_library(
     name = "sharing_enums_java_proto",
     deps = [":sharing_enums_proto"],
 )
+
+filegroup(
+    name = "all_files",
+    srcs = glob(["**"]),
+    visibility = ["//third_party/nearby_connections:__pkg__"],
+)
