--- a/proto/errorcode/BUILD
+++ b/proto/errorcode/BUILD
@@ -14,6 +14,8 @@
 
 # Proto for Nearby products
 
+load("//net/proto2/contrib/portable/cc:portable_proto_build_defs.bzl", "portable_proto_library")
+
 licenses(["notice"])
 
 package(default_visibility = ["//visibility:public"])
@@ -31,4 +33,32 @@ proto_library(
 java_lite_proto_library(
     name = "error_code_enums_java_proto_lite",
     deps = [":error_code_enums_proto"],
+)
+
+portable_proto_library(
+    name = "error_code_enums_portable_proto",
+    compatible_with = [
+        "//buildenv/target:non_prod",
+    ],
+    config = ":error_code_enums_proto_config",
+    copts = [
+        "-DGOOGLE_PROTOBUF_NO_RTTI=1",
+    ],
+    header_outs = [
+        "error_code_enums.pb.h",
+    ],
+    proto_deps = [
+        ":error_code_enums_proto",
+    ],
+    visibility = [
+        "//third_party/nearby_connections:__subpackages__",
+    ],
+)
+
+filegroup(
+    name = "error_code_enums_proto_config",
+    srcs = ["error_code_enums_proto_config.asciipb"],
+    compatible_with = [
+        "//buildenv/target:non_prod",
+    ],
 )
