Add submodule paths and update branch of gtest, depot_tools.
Git submodule needs to commit submodule paths to make it works. The
working branch of gtest, depot_tools project already changed to main
instead of master.

Reference: https://stackoverflow.com/q/39765663

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 [submodule "third_party/gtest"]
 	path = third_party/gtest
 	url = https://github.com/google/googletest
-	branch = master
+	branch = main
 [submodule "third_party/absl"]
 	path = third_party/absl
 	url = https://github.com/abseil/abseil-cpp
@@ -21,4 +21,4 @@
 [submodule "third_party/depot_tools"]
 	path = third_party/depot_tools
 	url = https://chromium.googlesource.com/chromium/tools/depot_tools.git
-	branch = master
+	branch = main
